--- a/test/程式閱讀題.md
+++ b/test/程式閱讀題.md
@@ -2,29 +2,29 @@
 # 程式閱讀題
 
 ```
-1.print("3*2*(17-2)")會印出甚麼結果:
+D 1.print("3*2*(17-2)")會印出甚麼結果:
 (A)0   (B)90  (C)出現錯誤,無法印出  (D)3*2*(17-2)
 
-2.print(3*2*(17-2))會印出甚麼結果:
+B 2.print(3*2*(17-2))會印出甚麼結果:
 (A)0   (B)90  (C)出現錯誤,無法印出  (D)3*2*(17-2)
 
-3.print("abc""+""def")會印出甚麼結果:
+B 3.print("abc""+""def")會印出甚麼結果:
 (A)出現錯誤,無法印出   (B)abc+def  (C)abc""+""def  (D)abcdef
 
-4.print("abc"+"def")會印出甚麼結果:
+D 4.print("abc"+"def")會印出甚麼結果:
 (A)出現錯誤,無法印出   (B)abc+def  (C)abc""+""def  (D)abcdef
 
-5.底下程式執行後結果為何?
+C 5.底下程式執行後結果為何?
 word = "arttarataaa"
 print(word.replace("a", "z",3))
 (A)出現錯誤,無法印出   (B)arttarataaa  (C)zrttzrztaaa (D)zrttzrztzzz
 
-6.底下程式執行後結果為何?
+D 6.底下程式執行後結果為何?
 word = "arttarataaa"
-print(word.replace("a", "z"))
+print(word.replace(""))a", "z
 (A)出現錯誤,無法印出   (B)arttarataaa  (C)zrttzrztaaa (D)zrttzrztzzz
 
-7根據底下程式,下列敘述何者為非?[複選題]
+A.C.D 7根據底下程式,下列敘述何者為非?[複選題]
 
 names = ['龍', '聖']
 index = 0
@@ -42,14 +42,14 @@ while index < len(names):
 # 程式設計題
 ```
 for 迴圈(loop)的技巧
-1.使用for 迴圈(loop)計算1+2+3+.....100
-2.使用for 迴圈(loop)計算1+3+5+7.....+99
-3.使用for 迴圈(loop)計算1*3*5*7.....*99
+1.使用for 迴圈(loop)計算1+2+3+.....100 = 5050
+2.使用for 迴圈(loop)計算1+3+5+7.....+99 = 2500
+3.使用for 迴圈(loop)計算1*3*5*7.....*99 = 2725392139750729502980713245400918633290796330545803413734328823443106201171875
 
 while 迴圈(loop)的技巧
-4.使用while 迴圈(loop)計算1+2+3+.....100
-5.使用while 迴圈(loop)計算1+3+5+7.....+99
-6.使用while 迴圈(loop計算1*3*5*7.....*99
+4.使用while 迴圈(loop)計算1+2+3+.....100 = 5050
+5.使用while 迴圈(loop)計算1+3+5+7.....+99 = 2500 
+6.使用while 迴圈(loop計算1*3*5*7.....*99 = 2725392139750729502980713245400918633290796330545803413734328823443106201171875
 ```
 
 
