--- a/test/程式閱讀題.md
+++ b/test/程式閱讀題.md
@@ -2,29 +2,29 @@
 # 程式閱讀題
 
 ```
-D 1.print("3*2*(17-2)")會印出甚麼結果:
+(D) 1.print("3*2*(17-2)")會印出甚麼結果:
 (A)0   (B)90  (C)出現錯誤,無法印出  (D)3*2*(17-2)
 
-B 2.print(3*2*(17-2))會印出甚麼結果:
+(B) 2.print(3*2*(17-2))會印出甚麼結果:
 (A)0   (B)90  (C)出現錯誤,無法印出  (D)3*2*(17-2)
 
-B 3.print("abc""+""def")會印出甚麼結果:
+(B) 3.print("abc""+""def")會印出甚麼結果:
 (A)出現錯誤,無法印出   (B)abc+def  (C)abc""+""def  (D)abcdef
 
-D 4.print("abc"+"def")會印出甚麼結果:
+(D) 4.print("abc"+"def")會印出甚麼結果:
 (A)出現錯誤,無法印出   (B)abc+def  (C)abc""+""def  (D)abcdef
 
-C 5.底下程式執行後結果為何?
+(C) 5.底下程式執行後結果為何?
 word = "arttarataaa"
 print(word.replace("a", "z",3))
 (A)出現錯誤,無法印出   (B)arttarataaa  (C)zrttzrztaaa (D)zrttzrztzzz
 
-D 6.底下程式執行後結果為何?
+(D) 6.底下程式執行後結果為何?
 word = "arttarataaa"
 print(word.replace(""))a", "z
 (A)出現錯誤,無法印出   (B)arttarataaa  (C)zrttzrztaaa (D)zrttzrztzzz
 
-A.C.D 7根據底下程式,下列敘述何者為非?[複選題]
+(A.C.D) 7根據底下程式,下列敘述何者為非?[複選題]
 
 names = ['龍', '聖']
 index = 0
