--- a/test/程式閱讀題.md
+++ b/test/程式閱讀題.md
@@ -24,7 +24,7 @@ word = "arttarataaa"
 print(word.replace("a", "z"))
 (A)出現錯誤,無法印出   (B)arttarataaa  (C)zrttzrztaaa (D)zrttzrztzzz
 
-(A.C.D) 7根據底下程式,下列敘述何者為非?[複選題]
+(C.D) 7根據底下程式,下列敘述何者為非?[複選題]
 
 names = ['龍', '聖']
 index = 0
